# IMO-Its-My-Own

./: .env.template  .gitignore
cmd_tool/: CMakeLists.txt  configure.cpp  main.cpp  send.cpp
cmd_tool/include/: configure.hpp  send.h  send.hpp
server_storage/: go.mod  go.sum  main.go
server_storage/src/config/: config.go
server_storage/src/controller/: file_controller.go  share_controller.go  user_controller.go
server_storage/src/db/: database.go
server_storage/src/dto/: file_dto.go  share_dto.go  user_dto.go
server_storage/src/model/: file.go  share.go  user.go
server_storage/src/repo/: file_repo.go  share_repo.go  user_repo.go
server_storage/src/routes/: hello_routes.go  user_route.go
server_storage/src/service/: file_service.go  share_service.go  user_service.go
server_storage/src/utils/: error.go  upload.go
